module/plex/test/with_ingress.expected.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/version: 0.0.0-devel
  name: plex
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: plex
  type: ClusterIP
---
apiVersion: v1
kind: Secret
metadata:
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/version: 0.0.0-devel
  name: plex
  namespace: default
stringData:
  claim: supersecret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/version: 0.0.0-devel
  name: plex
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
  template:
    metadata:
      annotations:
        checksum/secret: 23590db9
      labels:
        app.kubernetes.io/name: plex
    spec:
      containers:
      - env:
        - name: TZ
          value: UTC
        - name: ADVERTISE_IP
          value: "https://plex.test.com"
        - name: PLEX_UID
          value: "65532"
        - name: PLEX_GID
          value: "65532"
        - name: PLEX_CLAIM
          valueFrom:
            secretKeyRef:
              key: claim
              name: plex
        image: plexinc/pms-docker:1.32.6.7557-1cf77d501@sha256:c0a9bf98e65a3b012a013ff0fe38d6158b8b3921f0d694ccbff928161dc445ea
        imagePullPolicy: IfNotPresent
        name: plex
        ports:
        - containerPort: 32400
          name: http
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 32400
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /transcode
          name: transcode
        resources:
          limits:
            ephemeral-storage: 100Mi
          requests:
            cpu: 100m
            ephemeral-storage: 100Mi
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
      volumes:
      - emptyDir: {}
        name: config
      - emptyDir:
          sizeLimit: 10Gi
        name: transcode
      securityContext:
        fsGroup: 65532
        runAsGroup: 65532
        runAsUser: 65532
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: default
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/version: 0.0.0-devel
spec:
  rules:
  - host: plex.test.com
    http:
      paths:
      - backend:
          service:
            name: plex
            port:
              name: http
        path: /
        pathType: Prefix
---
